--- a/index.html
+++ b/index.html
@@ -19,3 +19,168 @@
     </header>
 
     <br>
+
+    <div class="formulario">
+  
+        <form action="formulario" method="POST">
+
+            <fieldset>
+                <legend>Dados Pessoais</legend>
+                <table cellspacing="20">
+                    <tr>
+                        <td>
+                            <label for="nome">Nome Completo</label>
+                            <br>
+                            <input type="text" name="nome" id="nomeCompleto">
+                        </td>
+
+                        <td>
+                            <label for="cargo">Cargo Pretendido</label>
+                            <br>
+                            <input type="text" name="cargo" id="cargoPretendido">
+                        </td>
+
+                                        
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <label for="data">Data de Nascimento</label>
+                            <br>
+                            <input type="date" name="data" id="dataDeNascimento">
+                        </td>
+
+                        <td>
+                            <label for="estadoCivil">Estado Civil</label>
+                            <br>
+                            <select name="estadoCivil" id="estadoCivil">
+                                <option value="#"></option>
+                                <option value="solteiro">Solteiro(a)</option>
+                                <option value="casado">Casado(a)</option>
+                            </select> 
+                        </td>   
+
+                        <td>
+                            <label for="sexo">Sexo</label>
+                            <br>
+                            <select name="sexo" id="sexo">
+                                <option value="#"></option>
+                                <option value="fem">Feminino</option>
+                                <option value="masc">Masculino</option>
+                            </select>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <label for="endereco">Endereço</label>
+                            <br>
+                            <input type="text" name="endereco" id="endereco">
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <label for="bairro">Bairro</label>
+                            <br>
+                            <input type="text" name="bairro" id="bairro">
+                        </td>
+
+                        <td>
+                            <label for="cidade">Cidade</label>
+                            <br>
+                            <input type="text" name="cidade" id="cidade">
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <label for="cep">CEP</label>
+                            <br>
+                            <input type="text" name="cep" id="cep">
+                        </td>
+
+                        <td>
+                            <label for="telefoneFixo1">Telefone Fixo 1</label>
+                            <br>
+                            <input type="text" name="telefoneFixo1" id="telefoneFixo1">
+                        </td>
+
+                        <td>
+                            <label for="telefoneFixo2">Telefone Fixo 2</label>
+                            <br>
+                            <input type="text" name="telefoneFixo2" id="telefoneFixo2">
+                        </td>
+
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <label for="celular">Celular</label>
+                            <br>
+                            <input type="text" name="celular" id="celular">
+                        </td>
+
+                        <td>
+                            <label for="contato">Contato</label>
+                            <br>
+                            <input type="text" name="contato" id="contato">
+                        </td>
+
+                        <td>
+                            <label for="email">E-mail</label>
+                            <br>
+                            <input type="email" name="email" id="email">
+                        </td>
+
+                    </tr>
+
+                </table>
+            </fieldset>
+        <br>
+        <br>
+            <fieldset>
+                <legend>Documentos</legend>
+                <table cellspacing = "20">
+
+                    <tr>
+                        <td>
+                            <label for="identidade">Identidade</label>
+                            <br>
+                            <input type="text" name="identidade" id="identidade">
+                        </td>
+
+                        <td>
+                            <label for="cpf">CPF</label>
+                            <br>
+                            <input type="text" name="cpf" id="cpf">
+                        </td>
+
+                        <td>
+                            <label for="possuiVeiculo">Possui Veículo</label>
+                            <br>
+                            <select name="possuiVeiculo" id="possuiVeiculo">
+                                <option value="#"></option>
+                                <option value="sim">Sim</option>
+                                <option value="nao">Não</option>
+                            </select>
+                            
+                        </td>
+
+                        <td>
+                            <label for="habilitacao">Habilitação</label>
+                            <br>
+                            <select name="habilitacao" id="habilitacao">
+                                <option value="#"></option>
+                                <option value="sim">Sim</option>
+                                <option value="nao">Não</option>
+                            </select>
+                        </td>
+                    </tr>
+
+                </table>
+            </fieldset>
+            <br>
+        </form>
+
+    </div>
