--- a/index.html
+++ b/index.html
@@ -184,3 +184,12 @@
         </form>
 
     </div>
+
+    
+    <footer>
+        <hr>
+        <h3>Todos os direitos reservados</h3>
+    </footer>
+
+</body>
+</html>
