troquei a frase de alguns elementos do footer

--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
             
                     <div class="linksDoFooter2">
                 <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem, ipsum.</p>
-                <p>Lorem ipsum dolor sit.</p>
-                <p>Lorem.</p>
+                <p>Jobs</p>
+                <p>Blog</p>
+                <p>Quem somos.</p>
                     </div>
         </div>
         
